--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;600;700;800;900&display=swap");
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "League Spartan", sans-serif;
+:root {
   --background: hsl(222, 26%, 31%);
   --screen: hsl(224, 36%, 15%);
   --keypad: hsl(223, 31%, 20%);
@@ -15,7 +11,16 @@
   --key-second-alt-background: hsl(6, 63%, 50%);
   --key-second-alt-shadow: hsl(6, 70%, 34%);
   --text: hsl(0, 0%, 100%);
-  --text-alt: hsl(221, 14%, 31%);
+  --text-buttons: hsl(221, 14%, 31%);
+  --text-buttons-first-alt: hsl(0, 0%, 100%);
+  --text-buttons-second-alt: hsl(221, 14%, 31%);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "League Spartan", sans-serif;
 }
 
 body {
@@ -91,6 +96,7 @@ body {
   border-radius: 100%;
   background-color: var(--key-second-alt-background);
   grid-area: 1/1/1/2;
+  cursor: pointer;
 }
 
 .theme-selector {
@@ -134,14 +140,14 @@ button {
   padding-top: 10px;
   background-color: var(--key-background);
   box-shadow: 0px 4px var(--key-shadow);
-  color: var(--text-alt);
+  color: var(--text-buttons);
   font-size: 33px;
   font-weight: 600;
   cursor: pointer;
 }
 
 .button-alt {
-  color: var(--text);
+  color: var(--text-buttons-first-alt);
   font-size: 20px;
   font-weight: 700;
 }
@@ -154,6 +160,7 @@ button {
 .button-red {
   background-color: var(--key-second-alt-background);
   box-shadow: 0px 4px var(--key-second-alt-shadow);
+  color: var(--text-buttons-second-alt);
 }
 
 #button-reset {
