--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   --text: hsl(0, 0%, 100%);
   --text-buttons: hsl(221, 14%, 31%);
   --text-buttons-first-alt: hsl(0, 0%, 100%);
-  --text-buttons-second-alt: hsl(221, 14%, 31%);
+  --text-buttons-second-alt: hsl(0, 0%, 100%);
 }
 
 * {
@@ -24,9 +24,10 @@
 }
 
 body {
-  position: relative;
   background-color: var(--background);
   color: var(--text);
+  height: 100vh;
+  overflow: hidden;
 }
 
 #container {
@@ -173,7 +174,7 @@ button {
 
 .attribution {
   position: absolute;
-  bottom: 5px;
+  top: 5px;
   width: 100%;
 }
 
@@ -185,11 +186,11 @@ button {
 .attribution a {
   font-size: 11px;
   font-weight: 600;
-  color: var(--key-first-alt-background);
+  color: var(--key-second-alt-background);
 }
 
 .attribution a:visited {
-  color: var(--key-second-alt-background);
+  color: var(--key-second-alt-shadow);
 }
 
 @media screen and (min-width: 768px) {
